--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "5.0.0",
     "react-use-state": "0.0.1",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "homepage":"./build"
   },
   "scripts": {
     "start": "react-scripts start",
