--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-222",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./build",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -13,8 +14,7 @@
     "react-scripts": "5.0.0",
     "react-use-state": "0.0.1",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.4",
-    "homepage":"./build"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
