--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-222",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./build",
+  "homepage": "https://fida-shnakher-333.netlify.app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
